vlib/v/checker/tests/generic_infix_plus_err.vv
fn sum<T>(a T, b T) T {
	return a + b
}

fn main() {
	sum({
		'id': 1
	}, {
		'id': 1
	})
}
